# ELO

./: CMakeLists.txt  CMakeLists.txt.user.3711e0d  CMakeLists.txt.user.c5e4d28  ELO-NG_de_DE.ts  ELOResources.qrc  README.md  eloassociatedfileview.cpp  eloassociatedfileview.h  elocalculatorwidget.cpp  elocalculatorwidget.h  elodocument.cpp  elodocument.h  elodocumenthandler.cpp  elodocumenthandler.h  elofilemodel.cpp  elofilemodel.h  elofileview.cpp  elofileview.h  elogitprocess.cpp  elogitprocess.h  elolinkdialog.cpp  elolinkdialog.h  elomainwindow.cpp  elomainwindow.h  elometadatadialog.cpp  elometadatadialog.h  eloreposettingsdialog.cpp  eloreposettingsdialog.h  elosettings.cpp  elosettings.h  elosettingsdialog.cpp  elosettingsdialog.h  elotabwidget.cpp  elotabwidget.h  elouser.cpp  elouser.h  elowebpage.cpp  elowebpage.h  elowebview.cpp  elowebview.h  (+2 more)
ckeditor5/: ckeditor.js  editorSettings.js  index.html  styles.css
ckeditor5_angepasst/: editorSettings.js
ckeditor5_orig/: index.html
qtwebengine_dictionaries/: en-US.bdic
